Add multi module support